Disable specific news sources in config.yaml
Commented out several news sources in the configuration file.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -108,10 +108,10 @@ platforms:
     name: "卫星通讯社"
   - id: "zaobao"
     name: "联合早报"
-  - id: "mktnews"
-    name: "MKT新闻"
-  - id: "kaopu"
-    name: "靠谱新闻"
+  #- id: "mktnews"
+    #name: "MKT新闻"
+  #- id: "kaopu"
+   # name: "靠谱新闻"
 
   # === 财经投资类 ===
   - id: "wallstreetcn-hot"
@@ -124,24 +124,24 @@ platforms:
     name: "财联社热门"
   - id: "gelonghui"
     name: "格隆汇"
-  - id: "xueqiu"
-    name: "雪球"
+  #- id: "xueqiu"
+   # name: "雪球"
   - id: "jin10"
     name: "金十数据"
-  - id: "fastbull"
-    name: "快讯通"
+  #- id: "fastbull"
+    #name: "快讯通"
 
   # === 社交/短视频/娱乐类 ===
   - id: "weibo"
     name: "微博"
-  - id: "douyin"
-    name: "抖音"
+  #- id: "douyin"
+    #name: "抖音"
   - id: "bilibili-hot-search"
     name: "bilibili 热搜"
-  - id: "tieba"
-    name: "贴吧"
-  - id: "zhihu"
-    name: "知乎"
+  #- id: "tieba"
+   # name: "贴吧"
+  #- id: "zhihu"
+    #name: "知乎"
  
 
 
