Comment out news sources in config.yaml
Comment out several news source entries in the config.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -104,8 +104,8 @@ platforms:
     name: "凤凰网"
   - id: "cankaoxiaoxi"
     name: "参考消息"
-  - id: "sputniknewscn"
-    name: "卫星通讯社"
+  #- id: "sputniknewscn"
+    #name: "卫星通讯社"
   - id: "zaobao"
     name: "联合早报"
   #- id: "mktnews"
@@ -118,16 +118,16 @@ platforms:
     name: "华尔街见闻 最热"
   - id: "wallstreetcn-quick"
     name: "华尔街见闻 快讯"
-  - id: "wallstreetcn-news"
-    name: "华尔街见闻 最新"
+  #- id: "wallstreetcn-news"
+    #name: "华尔街见闻 最新"
   - id: "cls-hot"
     name: "财联社热门"
   - id: "gelonghui"
     name: "格隆汇"
   #- id: "xueqiu"
    # name: "雪球"
-  - id: "jin10"
-    name: "金十数据"
+  #- id: "jin10"
+    #name: "金十数据"
   #- id: "fastbull"
     #name: "快讯通"
 
@@ -136,8 +136,8 @@ platforms:
     name: "微博"
   #- id: "douyin"
     #name: "抖音"
-  - id: "bilibili-hot-search"
-    name: "bilibili 热搜"
+  #- id: "bilibili-hot-search"
+    #name: "bilibili 热搜"
   #- id: "tieba"
    # name: "贴吧"
   #- id: "zhihu"
