--- a/config/config.yaml
+++ b/config/config.yaml
@@ -94,12 +94,12 @@ weight:
 platforms:
   
   # === 综合新闻媒体类 ===
-  - id: "toutiao"
-    name: "今日头条"
-  - id: "baidu"
-    name: "百度热搜"
-  - id: "thepaper"
-    name: "澎湃新闻"
+  #- id: "toutiao"
+    #name: "今日头条"
+  #- id: "baidu"
+    #name: "百度热搜"
+  #- id: "thepaper"
+    #name: "澎湃新闻"
   - id: "ifeng"
     name: "凤凰网"
   - id: "cankaoxiaoxi"
